kuber/service.yml
apiVersion: v1
kind: Service
metadata:
  name: projet-service
  labels:
    app: projetstrokes
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: projetstrokes
